# fix

./: .clangd  .gitignore  CMakeLists.txt
include/cli/: fix.hpp  loadingBar.hpp  parser.hpp  streamWriteCallback.hpp
include/file_handling/: CommandHistory.hpp  getHomeDirectory.hpp
include/llm/: CurlWrapper.hpp  retrieveApiCreds.hpp  verifyApiCreds.hpp
src/: CommandHistory.cpp  CurlWrapper.cpp  fix.cpp  loadingBar.cpp  main.cpp  parser.cpp  streamWriteCallback.cpp
